# dinosaurSDL3

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.cpp  makefile  pixi.toml  xmake.lua
.github/: build.yml
.github/workflows/: Build.yml  ci.yml  cmake-single-platform.yml  release.yml
Dino_C/: .gitattributes  README.md  main.c  main.h  makefile
Dino_C/Resources/: BLOG.md
Dino_CPP/: CMakeLists.txt  README.md  main.cc
Dino_CPP/include/: Utils.hpp
Runner_C/: CMakeLists.txt
Runner_C/include/: CollisionBox.h  Data.h  Horizon.h  HorizonLine.h  RectProvider.h  Runner.h  lTexture.h  tRex.h
Runner_C/src/: CollisionBox.c  Horizon.c  HorizonLine.c  Runner.c  TRex.c  lTexture.c
Runner_CPP/: .clangd  main.cpp
Runner_CPP/include/: Data.h  Drawable.h  HorizonLine.hpp  IDrawable.hpp  ITexture.hpp  Obstacle.hpp  Runner.hpp  Sprite.hpp  Utils.hpp  tRex.hpp
Runner_CPP/src/: ITexture.h  Obstacle.cpp  Runner.cpp  Sprite.cpp  Utils.cpp  tRex.cpp
Runner_c/: README.md
Runner_c/include/: data.h  game.h
Runner_c/src/: game.c  main.c  obstacle.c
docs/: BLOG.md  history-retrospective.md
include/: CONFIG.h  CollisionBox.h  Data.h  Horizon.h  Horizon.hpp  HorizonLine.h  HorizonLine.hpp  IDrawable.hpp  RectProvider.h  Runner.h  Runner.hpp  background.h  data.h  dino.h  game.h  gameover.h  lTexture.h  main.h  obstacle.h  obstacles.h  persistence.h  render.h  runner.h  score.h  struct.h  tRex.h  tRex.hpp
src/: Horizon.c  HorizonLine.c  ITexture.cpp  Obstacle.cpp  RectProvider.c  Runner.c  Runner.cpp  Runner.h  Sprite.cpp  TRex.c  background.c  dino.c  game.c  lTexture.c  main.c  main.h  main2.c  main_old.c  obstacle.c  obstacles.c  persistence.c  render.c  runner.c  tRex.c  tRex.cpp  tRex.h
test/: dino_official.js
tests/: test_game.c
